Test/typing/should_fail/enclosed_class.java
package tutu.titi.toto;

class A {

    A(int i){}

    private void myMethod(){}

	class A {

        A(float j){}

        private void myMethod(){}
    }
}